# data-serialization-aeson

./: README.md  data-serialization-aeson.cabal
src/Data/Serialization/JSON/: Aeson.hs
src/Data/Serialization/Text/: Aeson.hs
