name:              data-serialization-aeson
version:           0.1.1
synopsis:          Serialization library bindings for Aeson
homepage:          http://github.com/mvoidex/data-serialization-aeson
author:            Alexandr `voidex` Ruchkin
license:           BSD3
cabal-version:     >= 1.10
build-type:        Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base                         >= 4 && < 6,
        text                         == 0.11.*,
        bytestring               == 0.9.*,
        aeson                        >= 0.6 && < 0.7,
        unordered-containers         >= 0.2 && < 0.3,
        mtl                          >= 2.0 && < 2.2,
        data-serialization           >= 0.1 && < 0.2,
        data-serialization-attoparsec >= 0.1 && < 0.2
    exposed-modules:
        Data.Serialization.JSON.Aeson
        Data.Serialization.Text.Aeson
